--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -44,7 +44,7 @@ h3, #mainNavbar .navbar-brand {
 .navbar {
     background-color: #f2f2f2c1;
     padding: 0;
-    margin: 0;
+    margin: 5px 30px 0 0;
     font-size: 1.5rem;
     transition: all 200ms;
 }
